--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -46,6 +46,7 @@
                 "code": 120
             }
         ],
-        "no-trailing-spaces": "error"
+        "no-trailing-spaces": "error",
+        "eol-last": "error"
     }
 }
