--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "css-modules": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
