--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=http://localhost:3001
+VITE_ML_SEARCH_URL=https://api.mercadolibre.com/sites/MLB/search
+VITE_ML_ITEM_URL=https://api.mercadolibre.com/items
