--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src/**/*.ts --fix",
     "build": "tsc",
     "db:reset": "npm run build && sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
-    "dev": "docker-compose up -d && npm run db:reset && nodemon --exec ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mysql2": "^3.6.3",
-    "sequelize": "^6.34.0"
+    "sequelize": "^6.34.0",
+    "stripe": "^14.14.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.16",
