--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint src/**/*.ts --fix",
-    "vercel-build": "tsc",
-    "db:reset": "npm run build && sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
-    "dev": "nodemon --exec ts-node src/server.ts"
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +16,6 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mysql2": "^3.9.1",
-    "sequelize": "^6.34.0",
     "stripe": "^14.14.0"
   },
   "devDependencies": {
@@ -27,9 +24,8 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
-    "nodemon": "^3.0.1",
-    "sequelize-cli": "^6.6.2",
-    "ts-node": "^10.9.1",
+    "prisma": "^5.9.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.2.2"
   }
 }
