fix: console.log

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,5 @@
-DB_USER=root
-DB_PASS=commerce
-DB_NAME=E_CommerceX_DB
-DB_HOST=localhost
-DB_PORT=3306
+DATABASE_URL=postgres://luidi:sAyd28z1iPYBGNbxwf7yiQnQ1akYugbj@dpg-clnp2tgfvntc73b5gka0-a.oregon-postgres.render.com/super_db_rt28
 API_PORT=3001
+STRIPE_PUBLIC_KEY=stripe_public_key obter no site do stripe em developer > api keys
+STRIPE_PRIVATE_KEY=stripe_private_key obter no site do stripe em developer > api keys
+CLIENT_URL=http://localhost:3000
