--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mysql2": "^3.9.1",
+    "raw-body": "^2.5.2",
     "stripe": "^14.14.0"
   },
   "devDependencies": {
