--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,15 @@
   "dependencies": {
     "axios": "^1.6.2",
     "css-modules": "^0.3.0",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^10.0.4",
-    "sweetalert2": "^11.10.4"
+    "sweetalert2": "^11.10.4",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
