--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,4 @@ API_PORT=3001
 STRIPE_PUBLIC_KEY=stripe_public_key obter no site do stripe em developer > api keys
 STRIPE_PRIVATE_KEY=stripe_private_key obter no site do stripe em developer > api keys
 CLIENT_URL=http://localhost:3000
+JWT_SECRET=super_secret
