--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.1",
-    "stripe": "^14.14.0"
+    "stripe": "^14.14.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
