chore: variaveis da cloudinary

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,6 @@ STRIPE_PUBLIC_KEY=stripe_public_key obter no site do stripe em developer > api k
 STRIPE_PRIVATE_KEY=stripe_private_key obter no site do stripe em developer > api keys
 CLIENT_URL=http://localhost:3000
 JWT_SECRET=super_secret
+CLOUDINARY_CLOUD_NAME=cloudinary_cloud_name obter no site do cloudinary em account > cloud name
+CLOUDINARY_API_KEY=cloudinary_api_key obter no site do cloudinary em account > api key
+CLOUDINARY_API_SECRET=cloudinary_api_secret obter no site do cloudinary em account > api secret
