refactor: mudança de postgres para mongodb

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://luidi:sAyd28z1iPYBGNbxwf7yiQnQ1akYugbj@dpg-clnp2tgfvntc73b5gka0-a.oregon-postgres.render.com/super_db_rt28
+DATABASE_URL=database_url obter no site do mongodb em clusters > connect > connect your application
 API_PORT=3001
 STRIPE_PUBLIC_KEY=stripe_public_key obter no site do stripe em developer > api keys
 STRIPE_PRIVATE_KEY=stripe_private_key obter no site do stripe em developer > api keys
