--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint src/**/*.ts --fix",
     "dev": "tsx watch src/server.ts",
-    "vercel-build": "prisma generate && prisma migrate deploy"
+    "vercel-build": "prisma generate"
   },
   "keywords": [],
   "author": "",
