fix: desestruturação sem erros

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -39,6 +39,13 @@
             "error",
             "always"
         ],
-        "react-hooks/exhaustive-deps": "off"
+        "react-hooks/exhaustive-deps": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            {
+                "argsIgnorePattern": "^_",
+                "ignoreRestSiblings": true
+            }
+        ],
     }
 }
