--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^3.6.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^6.1.6",
