fix: nome do arquivo principal

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
     "lint": "eslint src/**/*.ts --fix",
     "dev": "tsx watch src/server.ts",
