--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.18.0",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-input-mask": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
