--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "css-modules": "^0.3.0",
     "date-fns": "^3.6.0",
     "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
@@ -30,6 +31,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-input-mask": "^3.0.5",
